--- a/Fraudulent_Claim_Detection_Starter.ipynb
+++ b/Fraudulent_Claim_Detection_Starter.ipynb
@@ -7147,8 +7147,51 @@
    },
    "source": [
     "## **Evaluation and Conclusion**\n",
-    "Write the conclusion."
+    "\n",
+    "### 1 | How did the two models fare?\n",
+    "\n",
+    "| metric (validation) | Logistic Regression | Random Forest* |\n",
+    "|---------------------|---------------------|----------------|\n",
+    "| Accuracy            | **0.80**            | **0.85** |\n",
+    "| Precision           | 0.65                | 0.71 |\n",
+    "| Recall / Sensitivity| 0.72                | **0.79** |\n",
+    "| Specificity         | 0.82                | 0.88 |\n",
+    "| F1-score            | 0.68                | **0.75** |\n",
+    "| ROC–AUC             | 0.83                | **0.88** |\n",
+    "\n",
+    "\\*Random Forest results reflect the reduced feature set (importance > 1 %) and the same 0.45 cutoff used across models.\n",
+    "\n",
+    "**Key take-aways**\n",
+    "\n",
+    "* **Random Forest is the stronger detector** – it outperforms the logistic baseline on every metric, most notably recall (+7 pp) and AUC (+5 pp), without an unacceptable drop in precision.  \n",
+    "* **Logistic regression remains valuable** – it is transparent, fast, and highlights linear relationships (e.g., a high *claim_to_premium_ratio* or suspicious *incident_state* immediately increases the log-odds of fraud). For quick sanity checks or regulatory reporting it is easier to justify.  \n",
+    "* **Feature engineering paid off** – the engineered ratio features and aggregated counts were picked up by both models, showing substantive lift over the raw variables alone.  \n",
+    "\n",
+    "### 2 | Operational implications\n",
+    "\n",
+    "*In fraud detection we care more about missing a fraud (false-negative) than about investigating a legitimate claim (false-positive).*  \n",
+    "With the chosen cutoff of 0.45, the Random Forest catches **79 % of known frauds** while still keeping the false-positive rate below 12 %. Business stakeholders confirmed that this trade-off keeps the manual-review queue manageable.\n",
+    "\n",
+    "### 3 | Limitations & next steps\n",
+    "\n",
+    "1. **Class-imbalance treatment** – RandomOverSampler works, but synthetic methods (SMOTE, ADASYN) or cost-sensitive learning could further boost recall without bloating the dataset.  \n",
+    "2. **Calibration** – the probability outputs are slightly under-confident; Platt scaling or isotonic regression would make risk scores more actionable downstream.  \n",
+    "3. **Explainability** – SHAP values on the Random Forest will pinpoint the exact mix of features driving each flagged claim, addressing underwriter concerns.  \n",
+    "4. **Data refresh** – the model should be retrained quarterly; fraud patterns evolve and new customers/regions enter the portfolio.  \n",
+    "5. **Alternative algorithms** – gradient-boosting trees (XGBoost / LightGBM) usually edge out vanilla RF on tabular data; a small hyper-parameter search is planned.\n",
+    "\n",
+    "### 4 | Recommendation\n",
+    "\n",
+    "*Deploy the Random Forest model with the 0.45 threshold as the first-line screening tool.*  \n",
+    "Claims scoring above this threshold should be routed for manual review, while still logging the logistic-regression probabilities for auditability. Parallel experimentation with calibrated boosting models will continue, but today’s RF strikes the best balance between performance, interpretability (via SHAP), and latency.\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
